php and stuff added

--- a/index.html
+++ b/index.html
@@ -1,282 +1,238 @@
 <!DOCTYPE HTML>
 <!--
-	Directive by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+Directive by HTML5 UP
+html5up.net | @n33co
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Directive by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body>
+<head>
+	<title>Exhibition Time Machine</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<link rel="icon" href="images/logo.png">
+</head>
+<body>
 
-		<!-- Header -->
-			<div id="header">
-				<span class="logo icon fa-paper-plane-o"></span>
-				<h1>Hi. This is <a href="http://thetimemachine.herokuapp.com"> Exhibition Time Machine</a></h1>
-				<p>A whole new way to experience art anywhere from anywhere. </p>
+	<!-- Header -->
+	<div id="header">
+		<span class="logo icon fa-paper-plane-o"></span>
+		<h1>Hi. This is <a href="http://thetimemachine.herokuapp.com"> Exhibition Time Machine</a></h1>
+		<p>A whole new way to experience art anywhere from anywhere. </p>
+		<br />
+	</div>
+
+	<!-- Main -->
+	<div id="main">
+
+		<header class="major container 75%">
+			<h2>Visit museums at anytime
 				<br />
+				and any place
+				<br />
+				at your own convenience
+			</h2>
+			<!--
+			<p>Tellus erat mauris ipsum fermentum<br />
+			etiam vivamus nunc nibh morbi.</p>
+		-->
+	</header>
+
+	<div class="box alt container">
+		<section class="feature left">
+			<a class="image"><img src="images/pic01.jpg" alt="" /></a>
+			<div class="content">
+				<h3>The Problem for Museums</h3>
+				<p>It's often difficult for museums to archive exhibits that they show. Often museum staff lack the technical know how to create such an archive and catalogs that are made to curate exhibits are not ideal to say the least. How can museums easily upload their content and archive their exhibits that their curators works so hard on?</p>
 			</div>
-
-		<!-- Main -->
-			<div id="main">
-
-				<header class="major container 75%">
-					<h2>Visit museums at anytime
-					<br />
-					and any place
-					<br />
-					at your own convenience
-					</h2>
-					<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
-				</header>
-
-				<div class="box alt container">
-					<section class="feature left">
-						<a href="#" class="image icon fa-signal"><img src="images/pic01.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The Problem for Museums</h3>
-							<p>It's often difficult for museums to archive exhibits that they show. Often museum staff lack the technical know how to create such an archive and catalogs that are made to curate exhibits are not ideal to say the least. How can museums easily upload their content and archive their exhibits that their curators works so hard on?</p>
-						</div>
-					</section>
-					<section class="feature right">
-						<a href="#" class="image icon fa-code"><img src="images/pic02.jpg" alt="" /></a>
-						<div class="content">
-							<h3>What about art lovers?</h3>
-							<p>What if you want to go see the exhibit happening at The Met but you're all the way in London and can't afford a flight to New York? What if you're sick and don't want to go to a public space and get other people sick?</p>
-						</div>
-					</section>
-					<section class="feature left">
-						<a href="#" class="image icon fa-mobile"><img src="images/pic03.jpg" alt="" /></a>
-						<div class="content">
-							<h3>The Solution</h3>
-							<p>Exhibition Time Machine is the solution to these problems that both Museums and art lovers all over the world experience. Using Exhibition Time Machine, museums can easily upload their content which is then archived and displayed on their designated page. Allowing museums to document their exhibits while simultaneously allowing people to appreciate them from anywhere in the world.</p>
-						</div>
-					</section>
-				</div>
-
-				<!--
-				<div class="box container">
-					<header>
-						<h2>A lot of generic stuff</h2>
-					</header>
-					<section>
-						<header>
-							<h3>Paragraph</h3>
-							<p>This is the subtitle for this particular heading</p>
-						</header>
-						<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-						habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-						leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-						amet risus elit.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Blockquote</h3>
-						</header>
-						<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-						tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-					</section>
-					<section>
-						<header>
-							<h3>Divider</h3>
-						</header>
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-						<hr />
-						<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-						ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-						facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
-						tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-						posuere cubilia.</p>
-					</section>
-					<section>
-						<header>
-							<h3>Unordered List</h3>
-						</header>
-						<ul class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ul>
-					</section>
-					<section>
-						<header>
-							<h3>Ordered List</h3>
-						</header>
-						<ol class="default">
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-							<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
-						</ol>
-					</section>
-					<section>
-						<header>
-							<h3>Table</h3>
-						</header>
-						<div class="table-wrapper">
-							<table class="default">
-								<thead>
-									<tr>
-										<th>ID</th>
-										<th>Name</th>
-										<th>Description</th>
-										<th>Price</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-									<tr>
-										<td>45815</td>
-										<td>Something</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>29.99</td>
-									</tr>
-									<tr>
-										<td>24524</td>
-										<td>Nothing</td>
-										<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
-										<td>19.99</td>
-									</tr>
-								</tbody>
-								<tfoot>
-									<tr>
-										<td colspan="3"></td>
-										<td>100.00</td>
-									</tr>
-								</tfoot>
-							</table>
-						</div>
-					</section>
-					<section>
-						<header>
-							<h3>Form</h3>
-						</header>
-						<form method="post" action="#">
-							<div class="row">
-								<div class="6u 12u(mobilep)">
-									<label for="name">Name</label>
-									<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-								</div>
-								<div class="6u 12u(mobilep)">
-									<label for="email">Email</label>
-									<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="12u">
-									<label for="subject">Subject</label>
-									<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-								</div>
-							</div>
-							<div class="row">
-								<div class="12u">
-									<label for="subject">Message</label>
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-								</div>
-							</div>
-							<div class="row">
-								<div class="12u">
-									<ul class="actions">
-										<li><input type="submit" value="Send" /></li>
-										<li><input type="reset" value="Reset" class="alt" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</section>
-				</div>
-				-->
-
-				<footer class="major container 75%">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-					<ul class="actions">
-						<li><a href="#" class="button">Join our crew</a></li>
-					</ul>
-				</footer>
-
+		</section>
+		<section class="feature right">
+			<a class="image"><img src="images/pic02.jpg" alt="" /></a>
+			<div class="content">
+				<h3>What about art lovers?</h3>
+				<p>What if you want to go see the exhibit happening at The Met but you're all the way in London and can't afford a flight to New York? What if you're sick and don't want to go to a public space and get other people sick?</p>
 			</div>
-
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container 75%">
-
-					<header class="major last">
-						<h2>Questions or comments?</h2>
-					</header>
-
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-
-					<form method="post" action="#">
-						<div class="row">
-							<div class="6u 12u(mobilep)">
-								<input type="text" name="name" placeholder="Name" />
-							</div>
-							<div class="6u 12u(mobilep)">
-								<input type="email" name="email" placeholder="Email" />
-							</div>
-						</div>
-						<div class="row">
-							<div class="12u">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
-						</div>
-						<div class="row">
-							<div class="12u">
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-						</div>
-					</form>
-
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					</ul>
-
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-				</div>
+		</section>
+		<section class="feature left">
+			<a class="image custom-image-one"><img style="height:200px; width:200px;" src="images/pic03.jpg" alt="" /></a>
+			<div class="content">
+				<h3>The Solution</h3>
+				<p>Exhibition Time Machine is the solution to these problems that both Museums and art lovers all over the world experience. Using Exhibition Time Machine, museums can easily upload their content which is then archived and displayed on their designated page. Allowing museums to document their exhibits while simultaneously allowing people to appreciate them from anywhere in the world.</p>
 			</div>
+		</section>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<!--
+	<div class="box container">
+	<header>
+	<h2>A lot of generic stuff</h2>
+</header>
+<section>
+<header>
+<h3>Paragraph</h3>
+<p>This is the subtitle for this particular heading</p>
+</header>
+<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
+amet risus elit.</p>
+</section>
+<section>
+<header>
+<h3>Blockquote</h3>
+</header>
+<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
+tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
+</section>
+<section>
+<header>
+<h3>Divider</h3>
+</header>
+<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+posuere cubilia.</p>
+<hr />
+<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+posuere cubilia.</p>
+</section>
+<section>
+<header>
+<h3>Unordered List</h3>
+</header>
+<ul class="default">
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+</ul>
+</section>
+<section>
+<header>
+<h3>Ordered List</h3>
+</header>
+<ol class="default">
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+</ol>
+</section>
+<section>
+<header>
+<h3>Table</h3>
+</header>
+<div class="table-wrapper">
+<table class="default">
+<thead>
+<tr>
+<th>ID</th>
+<th>Name</th>
+<th>Description</th>
+<th>Price</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>45815</td>
+<td>Something</td>
+<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
+<td>29.99</td>
+</tr>
+<tr>
+<td>24524</td>
+<td>Nothing</td>
+<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
+<td>19.99</td>
+</tr>
+<tr>
+<td>45815</td>
+<td>Something</td>
+<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
+<td>29.99</td>
+</tr>
+<tr>
+<td>24524</td>
+<td>Nothing</td>
+<td>Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</td>
+<td>19.99</td>
+</tr>
+</tbody>
+<tfoot>
+<tr>
+<td colspan="3"></td>
+<td>100.00</td>
+</tr>
+</tfoot>
+</table>
+</div>
+</section>
+<section>
+<header>
+<h3>Form</h3>
+</header>
+<form method="post" action="#">
+<div class="row">
+<div class="6u 12u(mobilep)">
+<label for="name">Name</label>
+<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+</div>
+<div class="6u 12u(mobilep)">
+<label for="email">Email</label>
+<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
+</div>
+</div>
+<div class="row">
+<div class="12u">
+<label for="subject">Subject</label>
+<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
+</div>
+</div>
+<div class="row">
+<div class="12u">
+<label for="subject">Message</label>
+<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+</div>
+</div>
+<div class="row">
+<div class="12u">
+<ul class="actions">
+<li><input type="submit" value="Send" /></li>
+<li><input type="reset" value="Reset" class="alt" /></li>
+</ul>
+</div>
+</div>
+</form>
+</section>
+</div>
+-->
 
-	</body>
+
+</div>
+
+<!-- Footer -->
+<div id="footer">
+	<div class="container 75%">
+
+		<ul class="copyright">
+			<li>&copy; Exhibition Time Machine. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+
+	</div>
+</div>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/js/main.js"></script>
+
+</body>
 </html>
